<resources>
    <string name="app_name">Flag Camp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="register_link">Don\'t have an account? Swipe left to register</string>
    <string name="facebook_app_id">3092371037472115</string>
    <string name="fb_login_protocol_scheme">fb3092371037472115</string>
    <string name="view_details"><u>View full details</u></string>
    <string name="rationale"><b>Location Permission Denied</b>\nAre you sure you want to deny this permission?</string>
    <string name="profile_edit"><u>Edit</u></string>
</resources>
